# Dynamic-Price-Optimization-Platfrom

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  render.yaml
backend/: .dockerignore  .env.example  .vercelignore  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  677a1a8e2ca8_add_dataset_ingestion_table.py  772f1e83d5df_add_core_business_entities.py
backend/api/: index.py  seed.sqlite
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/core/: config.py  context.py  database.py  errors.py  logging.py  middleware.py  orm.py
backend/app/ingestion/: __init__.py  catalog.py  errors.py  frames.py  parsing.py  preview.py  registry.py  validation.py
backend/app/models/: __init__.py  category.py  competitor.py  competitor_price.py  dataset.py  historical_sale.py  product.py
backend/app/pricing/: errors.py
backend/app/repositories/: base.py  category.py  competitor.py  competitor_price.py  dataset.py  historical_sale.py  pagination.py  product.py
backend/app/schemas/: analytics.py  catalog.py  category.py  common.py  competitor.py  competitor_price.py  dataset.py  elasticity.py  envelope.py  forecast.py  health.py  historical_sale.py  optimization.py  product.py  report.py  simulation.py
backend/app/services/: analytics.py  catalog.py  health.py  ingestion.py
backend/app/storage/: __init__.py  base.py  local.py
backend/scripts/: seed.py  start.sh
backend/tests/: conftest.py  support.py
backend/tests/analytics/: test_analytics_api.py  test_analytics_service.py  test_error_paths.py  test_finance_engine.py  test_rounding.py
backend/tests/catalog/: test_api.py  test_service.py
backend/tests/elasticity/: test_api.py  test_engine.py  test_regression.py  test_service.py
backend/tests/forecasting/: test_api.py  test_engine.py  test_service.py  test_strategies_and_metrics.py  test_validation.py
backend/tests/ingestion/: test_api.py  test_hardening.py  test_parsing.py  test_preview.py  (+2 more)
(+153 files in other folders)
