[project]
name = "dpop-backend"
version = "0.1.0"
description = "Dynamic Pricing Optimization Platform — backend service (M2 foundation)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "httpx>=0.27",
    "ruff>=0.5",
    "black>=24.4",
    "mypy>=1.10",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

# ----------------------------- Black -----------------------------
[tool.black]
line-length = 100
target-version = ["py310"]

# ----------------------------- Ruff ------------------------------
[tool.ruff]
line-length = 100
target-version = "py310"
src = ["app", "tests"]

[tool.ruff.lint]
# E/W pycodestyle, F pyflakes, I import sorting, B bugbear, UP pyupgrade,
# N naming, C4 comprehensions, SIM simplify
select = ["E", "W", "F", "I", "B", "UP", "N", "C4", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

# ----------------------------- mypy ------------------------------
[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# ---------------------------- pytest -----------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra -q"
markers = [
    "unit: fast isolated tests with no I/O",
    "integration: tests that exercise the app through HTTP",
]
filterwarnings = [
    # Keep CI logs concise: silence a known deprecation from Starlette's TestClient
    # (it drives httpx internally). Message-only match — the warning's category is
    # StarletteDeprecationWarning, not the stdlib DeprecationWarning. Not our code.
    "ignore:Using `httpx`",
]
